# AlphaDataRayCaster

./: .gitignore  .gitmodules  AlphaDataRayCaster.cbp  AlphaDataRayCaster.depend  Globals.h  Makefile  bunny_tests.sh  compileFPGA.sh  environment.yml  host.c  main  main.cpp  premake5.lua  raytracer  testeAD.c
FPGA/: accelfpga.cpp  accelfpga.hpp
examples/: test_cpu_input.dark
hls/: hls.c
hls/v01_single_core/: export_hardware.sh  main.c  main.h  synthesis.tcl  testbench.c
include/: BRDF.h  Camera.h  CameraData.h  Chrono.h  Color.h  Constants.h  Grid.h  GridData.h  Image.h  Intersection.h  Light.h  Material.h  Mesh.h  Ray.h  Scene.h  Triangle.h  TriangleBase.h  Vec3d.h  trianglebase.h
include/Application/: Parser.h  Session.h
include/DarkRenderer/: Globals.h
include/FPGA/: FPGA.hpp  MemoryManager.hpp  XIntersectFPGA.hpp
include/Tracer/: Tracer.h
include/application/: Parser.h  Session.h
include/material/: BRDF.h  Material.h
src/: BRDF.cpp  Camera.cpp  CameraData.cpp  Color.cpp  Grid.cpp  GridData.cpp  Image.cpp  Light.cpp  Material.cpp  Mesh.cpp  Ray.cpp  Scene.cpp  Triangle.cpp  TriangleBase.cpp  Vec3d.cpp  trianglebase.cpp
tests/: CMakeLists.txt  Makefile  Readme.md  rayTest  test_memory_chunk.cpp  test_memory_manager.cpp  triangleBaseTest.cpp  ut_ray.cpp
tests/test_cases/: test_cases.py
tests/test_cases/test_cpu/: test_cpu_input.dark
tools/scripts/: clean.sh  compile_raytracer.sh  run_tests.sh  setup_env.sh
